--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -599,6 +599,8 @@ font-family: 'Arial Bold', sans-serif;
     grid-template-columns: repeat(3,1fr);
     text-align: left;
     grid-gap: 30px;
+    max-width: 992px;
+    margin: auto;
 }
 .topNewsdata .NewsImg2 img {
     width: 100%;
@@ -613,7 +615,7 @@ font-family: 'Arial Bold', sans-serif;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 .topNewsdata p {
@@ -622,7 +624,7 @@ font-family: 'Arial Bold', sans-serif;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     margin-bottom: 5px;
     font-family: Arial , sans-serif;
@@ -638,16 +640,14 @@ font-family: 'Arial Bold', sans-serif;
 #Top-News .newdgrid {
     border-bottom: 1px solid #ddd;
     padding-bottom: 20px;
-
 }
 .Homenews-grid {
-    padding-top: 30px;
+    padding-top:0px;
 }
 .topNewsdata .NewsImg2 img {
     padding-right: 0px;
     padding-bottom: 15px;
 }
-
 
 .topNewsdata a:nth-child(2) {
     width: 525px;
@@ -664,7 +664,7 @@ font-family: 'Arial Bold', sans-serif;
     text-align: center;
 }
 .topNewsdata a:nth-child(4) {
-    margin-top: -170px;
+    margin-top: -200px;
 }
 .topNewsdata a:nth-child(4) img {
     display: none;
@@ -688,7 +688,7 @@ font-family: 'Arial Bold', sans-serif;
     display: none;
 }
 .topNewsdata a:nth-child(6) {
-    margin-top: -130px;
+    margin-top: -200px;
 }
 .topNewsdata a:nth-child(9) img {
     display: none;
@@ -697,7 +697,7 @@ font-family: 'Arial Bold', sans-serif;
     display: block;
 }
 .topNewsdata a:nth-child(9) {
-    margin-top: -130px;
+    margin-top: -190px;
 }
 .topNewsdata a:nth-child(8) {
     background-color: gray;
