--- a/client/src/component/About.css
+++ b/client/src/component/About.css
@@ -64,6 +64,10 @@ br {
     font-size: 16px;
     line-height: 24px;
 }
+/* .input-click{
+    display: none;
+} */
+
 /* who we are end */
 
 /* value section start */
