--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -256,15 +256,16 @@ font-family: Arial , sans-serif;
     line-height: 24px;
 
 }
-#Investing-sec .Invest-btn button {
+#Investing-sec .Invest-btn  button {
     border: 1px solid #019AFF;
     background: #019AFF;
     font-size: 18px;
     line-height: 30px;
     border-radius: 27px;
     padding: 8px 25px;
+    color: #fff;
 }
-#Investing-sec .Invest-btn button a {
+#Investing-sec .Invest-btn a{
     font-size: 16px;
     text-decoration: none;
     border-style: solid;
