--- a/client/src/component/AddBlogs.css
+++ b/client/src/component/AddBlogs.css
@@ -9,6 +9,12 @@
     border-radius: 5px;
 
 }
+
+/* .ck.ck-content.ck-editor__editable.ck-rounded-corners.ck-editor__editable_inline.ck-blurred{
+padding: 40px;
+} */
+
+
 .give_margin{
     justify-content: right;
 }
